OutfitSales/src/objects/Outfit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outfits</relationshipLabel>
        <relationshipName>Outfits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRAND__c</fullName>
        <label>BRAND</label>
        <picklist>
            <picklistValues>
                <fullName>Barbour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRED PERRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HACKETT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEVI&apos;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RALPH LAUREN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TED BAKER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOMMY HILFIGER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EVENING_STYLE__c</fullName>
        <label>EVENING STYLE</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trendy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dapper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHIRT_FIT__c</fullName>
        <label>SHIRT FIT</label>
        <picklist>
            <picklistValues>
                <fullName>Slim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relaxed Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIZES__c</fullName>
        <label>SIZES</label>
        <picklist>
            <picklistValues>
                <fullName>X-SMALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-LARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX-LARGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TROUSERS_FIT__c</fullName>
        <label>TROUSERS FIT</label>
        <picklist>
            <picklistValues>
                <fullName>Slim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relaxed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WORK_STYLE__c</fullName>
        <label>WORK STYLE</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trendy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outfit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outfit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outfits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>